[package]
name = "beam-register"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
strum = "0.26"
strum_macros = "0.26"
regex = "1.11"
lazy_static = "1.5"
futures = "0.3"
tokio-stream = { version = "0.1", features = ["io-util"] } # Enable io-util feature