[package]
name = "beam-register"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
regex = "1"

tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4.5", features = ["env", "derive"] }
serde_json = "1.0"
